--- a/packages/community/src/content/docs/zh-cn/guides/facade/general.mdx
+++ b/packages/community/src/content/docs/zh-cn/guides/facade/general.mdx
@@ -433,6 +433,6 @@ univerAPI.registerFunction({
 
 说明
 
-- `locales` 下可以设置多种语言，命名规则参考 [LocaleType](/api/core/enums/LocaleType.html)。可以在 `functionList` 下添加多个公式的翻译。详细的字段说明请参考[如何在 UniverFormulaEnginePlugin 中添加公式](/zh-cn/api/sheets-formula#如何在-univerformulaengineplugin-中添加公式)的部分。
+- `locales` 下可以设置多种语言，命名规则参考 [LocaleType](/api/core/enums/LocaleType.html)。可以在 `functionList` 下添加多个公式的翻译。详细的字段说明请参考 [如何在 Formula Engine 中添加公式](/zh-cn/guides/customization/formula/#如何在-formula-engine-中添加公式) 的部分。
 - `description` 设置自定义公式的描述。
 - `calculate` 编写计算公式的具体算法和名称映射。入参为使用公式时用户输入的内容，可能为数字、字符串、布尔值，或者一个范围，也是返回同样的格式。
