docs(formula): facade formula links to custom formula

--- a/packages/community/src/content/docs/guides/customization/formula.mdx
+++ b/packages/community/src/content/docs/guides/customization/formula.mdx
@@ -10,6 +10,8 @@ import Numpy from '@/assets/img/formula/numpy.png';
 
 import { Image } from 'astro:assets';
 
+When the existing formulas do not meet your needs, you can register custom formulas in the following ways.
+
 ## How To Configure Custom Formulas Through Plugin
 
 Follow the steps below to implement a custom formula `CUSTOMSUM`, configure the formula information into the formula plugin, and register the formula plugin with Univer.
