--- a/packages/community/src/content/docs/zh-cn/guides/customization/formula.mdx
+++ b/packages/community/src/content/docs/zh-cn/guides/customization/formula.mdx
@@ -10,6 +10,8 @@ import Numpy from '@/assets/img/formula/numpy-zh.png';
 
 import { Image } from 'astro:assets';
 
+当现有公式不满足您需求的时候，可以通过以下多种方式来注册自定义公式。
+
 ## 如何通过插件配置自定义公式
 
 按照以下步骤来实现一个自定义公式 `CUSTOMSUM`，并将公式信息配置到公式插件中，随着公式插件注册到 Univer 中。
