--- a/packages/community/src/content/docs/guides/facade/general.mdx
+++ b/packages/community/src/content/docs/guides/facade/general.mdx
@@ -292,3 +292,148 @@ univerAPI.onCommandExecuted((command, options) => {
 ```
 
 Note: Make sure there is a unitID when starting Univer. If the unitID is not specified, collaboration will not work.
+
+## Register Formula
+
+Using  Facade API, you can quickly and easily register custom formulas in the current Univer instance.
+
+As shown in the following case, use `registerFunction` to register the algorithm, name, and description required by a `CUSTOMSUM` formula into the formula plugin at one time. After execution, the formula can be used. Enter `=CUSTOMSUM` in any blank cell to see the prompt.
+
+```js
+univerAPI.registerFunction({
+    calculate: [
+        [function (...variants) {
+            let sum = 0;
+
+            for(const variant of variants){
+                sum += Number(variant) || 0;
+            }
+
+            return sum;
+        }, 'CUSTOMSUM', 'Adds its arguments'],
+        // ... more formulas
+    ]
+})
+```
+
+If you need to unregister the formula, you can call the `dispose` method.
+
+```js
+const functionDisposable = univerAPI.registerFunction({
+   // calculate
+})
+
+// Unregister the function
+functionDisposable.dispose();
+```
+
+
+If you want to provide more complete international content and description, you can also configure the `locales` and `description` fields. As follows.
+
+```js
+const FUNCTION_NAMES_USER = {
+     CUSTOMSUM: 'CUSTOMSUM'
+}
+
+univerAPI.registerFunction({
+    locales:{
+        'zhCN': {
+            formulaCustom: {
+                CUSTOMSUM: {
+                description: '将单个值、单元格引用或是区域相加，或者将三者的组合相加。',
+                abstract: '求参数的和',
+                links: [
+                    {
+                        title: '教学',
+                        url: 'https://support.microsoft.com/zh-cn/office/sum-%E5%87%BD%E6%95%B0-043e1c7d-7726-4e80-8f32-07b23e057f89',
+                    },
+                ],
+                functionParameter: {
+                    number1: {
+                        name: '数值1',
+                        detail: '要相加的第一个数字。 该数字可以是 4 之类的数字，B6 之类的单元格引用或 B2:B8 之类的单元格范围。',
+                    },
+                    number2: {
+                        name: '数值2',
+                        detail: '这是要相加的第二个数字。 可以按照这种方式最多指定 255 个数字。',
+                    },
+                },
+            },
+                // ... more formulas
+            },
+        },
+        'enUS':{
+            formulaCustom:{
+                CUSTOMSUM: {
+                    description: `You can add individual values, cell references or ranges or a mix of all three.`,
+                    abstract: `Adds its arguments`,
+                    links: [
+                        {
+                            title: 'Instruction',
+                            url: 'https://support.microsoft.com/en-us/office/sum-function-043e1c7d-7726-4e80-8f32-07b23e057f89',
+                        },
+                    ],
+                    functionParameter: {
+                        number1: {
+                            name: 'number1',
+                            detail: 'The first number you want to add. The number can be like 4, a cell reference like B6, or a cell range like B2:B8.',
+                        },
+                        number2: {
+                            name: 'number2',
+                            detail: 'This is the second number you want to add. You can specify up to 255 numbers in this way.',
+                        },
+                    },
+                },
+            }
+        }
+    },
+    description:[
+        {
+            functionName: FUNCTION_NAMES_USER.CUSTOMSUM,
+            aliasFunctionName: 'formulaCustom.CUSTOMSUM.aliasFunctionName',
+            functionType: 15,
+            description: 'formulaCustom.CUSTOMSUM.description',
+            abstract: 'formulaCustom.CUSTOMSUM.abstract',
+            functionParameter: [
+                {
+                    name: 'formulaCustom.CUSTOMSUM.functionParameter.number1.name',
+                    detail: 'formulaCustom.CUSTOMSUM.functionParameter.number1.detail',
+                    example: 'A1:A20',
+                    require: 1,
+                    repeat: 0,
+                },
+                {
+                    name: 'formulaCustom.CUSTOMSUM.functionParameter.number2.name',
+                    detail: 'formulaCustom.CUSTOMSUM.functionParameter.number2.detail',
+                    example: 'B2:B10',
+                    require: 0,
+                    repeat: 1,
+                },
+            ],
+        },
+        // ... more formulas
+    ],
+    calculate: [
+        [function (...variants) {
+            let sum = 0;
+
+            for(const variant of variants){
+                sum += Number(variant) || 0;
+            }
+
+            return sum;
+        }, FUNCTION_NAMES_USER.CUSTOMSUM],
+        // ... more formulas
+    ]
+})
+```
+
+Note
+
+-   Multiple languages can be set under `locales`. For naming rules, please refer to [LocaleType](/api/core/enums/LocaleType.html). Translations for multiple formulas can be added under `functionList`. For detailed field descriptions, please refer to the [How to add formulas in Formula Engine](/guides/customization/formula/#how-to-add-formulas-in-formula-engine) section.
+-   `description` sets the description of the custom formula.
+-   `calculate` writes the specific algorithm and name mapping of the calculation formula. The input parameter is the content entered by the user when using the formula, which may be a number, a string, a Boolean value, or a array.
+
+:::tip
+If you want to reuse the algorithm provided by the formula system and enhance the capability of the formula algorithm, you can register a custom formula through plug-in configuration. For detailed tutorials, please refer to [Custom Formula](/guides/customization/formula/).
+:::
