--- a/packages/community/src/content/docs/zh-cn/guides/facade/general.mdx
+++ b/packages/community/src/content/docs/zh-cn/guides/facade/general.mdx
@@ -241,7 +241,7 @@ univerAPI.executeCommand('univer.command.redo')
 
 请参考下面文档来拓展 Univer 的 UI :
 
-- [拓展Canvas](/zh-cn/guides/customization/canvas/)
+- [扩展 Canvas](/zh-cn/guides/customization/canvas/)
 - [自定义主题](/zh-cn/guides/customization/theme/)
 
 ## Websocket
@@ -293,3 +293,147 @@ univerAPI.onCommandExecuted((command, options) => {
 ```
 
 注意：启动 Univer 的时候要确保有 unitID ，不指定 unitID 的话无法协同。
+
+## 注册公式
+
+使用 Facade API，可以方便快速的在当前 Univer 实例中注册自定义公式。
+
+如下案例所示，使用 `registerFunction` 将一个 `CUSTOMSUM` 公式所需要的算法、名称、描述一次性注册到公式插件，执行之后就可以使用公式了。在任一空白单元格输入 `=CUSTOMSUM` 可以看到提示。
+
+```js
+univerAPI.registerFunction({
+    calculate: [
+        [function (...variants) {
+            let sum = 0;
+
+            for(const variant of variants){
+                sum += Number(variant) || 0;
+            }
+
+            return sum;
+        }, 'CUSTOMSUM', '求参数的和'],
+        // ... 更多公式
+    ]
+})
+```
+
+如果需要卸载所注册的公式，可以调用 `dispose` 方法。
+
+```js
+const functionDisposable = univerAPI.registerFunction({
+   // calculate
+})
+
+// 卸载所注册的公式
+functionDisposable.dispose();
+```
+
+如果想要提供更完善的国际化内容和描述，还可以配置 `locales` 和 `description` 字段。如下所示。
+
+```js
+const FUNCTION_NAMES_USER = {
+    CUSTOMSUM: 'CUSTOMSUM'
+}
+
+univerAPI.registerFunction({
+    locales:{
+        'zhCN': {
+            formulaCustom: {
+                CUSTOMSUM: {
+                    description: '将单个值、单元格引用或是区域相加，或者将三者的组合相加。',
+                    abstract: '求参数的和',
+                    links: [
+                        {
+                            title: '教学',
+                            url: 'https://support.microsoft.com/zh-cn/office/sum-%E5%87%BD%E6%95%B0-043e1c7d-7726-4e80-8f32-07b23e057f89',
+                        },
+                    ],
+                    functionParameter: {
+                        number1: {
+                            name: '数值1',
+                            detail: '要相加的第一个数字。 该数字可以是 4 之类的数字，B6 之类的单元格引用或 B2:B8 之类的单元格范围。',
+                        },
+                        number2: {
+                            name: '数值2',
+                            detail: '这是要相加的第二个数字。 可以按照这种方式最多指定 255 个数字。',
+                        },
+                    },
+                },
+                // ... 更多公式
+            },
+        },
+        'enUS':{
+            formulaCustom:{
+                CUSTOMSUM: {
+                    description: `You can add individual values, cell references or ranges or a mix of all three.`,
+                    abstract: `Adds its arguments`,
+                    links: [
+                        {
+                            title: 'Instruction',
+                            url: 'https://support.microsoft.com/en-us/office/sum-function-043e1c7d-7726-4e80-8f32-07b23e057f89',
+                        },
+                    ],
+                    functionParameter: {
+                        number1: {
+                            name: 'number1',
+                            detail: 'The first number you want to add. The number can be like 4, a cell reference like B6, or a cell range like B2:B8.',
+                        },
+                        number2: {
+                            name: 'number2',
+                            detail: 'This is the second number you want to add. You can specify up to 255 numbers in this way.',
+                        },
+                    },
+                },
+            }
+        }
+    },
+    description:[
+         {
+            functionName: FUNCTION_NAMES_USER.CUSTOMSUM,
+            aliasFunctionName: 'formulaCustom.CUSTOMSUM.aliasFunctionName',
+            functionType: 15,
+            description: 'formulaCustom.CUSTOMSUM.description',
+            abstract: 'formulaCustom.CUSTOMSUM.abstract',
+            functionParameter: [
+                {
+                    name: 'formulaCustom.CUSTOMSUM.functionParameter.number1.name',
+                    detail: 'formulaCustom.CUSTOMSUM.functionParameter.number1.detail',
+                    example: 'A1:A20',
+                    require: 1,
+                    repeat: 0,
+                },
+                {
+                    name: 'formulaCustom.CUSTOMSUM.functionParameter.number2.name',
+                    detail: 'formulaCustom.CUSTOMSUM.functionParameter.number2.detail',
+                    example: 'B2:B10',
+                    require: 0,
+                    repeat: 1,
+                },
+            ],
+        },
+        // ... 更多公式
+    ],
+    calculate: [
+        [function (...variants) {
+            let sum = 0;
+
+            for(const variant of variants){
+                sum += Number(variant) || 0;
+            }
+
+            return sum;
+        }, FUNCTION_NAMES_USER.CUSTOMSUM],
+        // ... 更多公式
+    ]
+})
+```
+
+说明
+
+- `locales` 下可以设置多种语言，命名规则参考 [LocaleType](/api/core/enums/LocaleType.html)。可以在 `functionList` 下添加多个公式的翻译。详细的字段说明请参考 [如何在 Formula Engine 中添加公式](/zh-cn/guides/customization/formula/#如何在-formula-engine-中添加公式) 的部分。
+- `description` 设置自定义公式的描述。
+- `calculate` 编写计算公式的具体算法和名称映射。入参为使用公式时用户输入的内容，可能为数字、字符串、布尔值，或者一个数组。
+
+:::tip
+如果想复用公式系统提供的算法，增强公式算法的能力，可以通过插件配置的方式注册自定义公式，详细教程请参考 [自定义公式](/zh-cn/guides/customization/formula/)。
+:::
