--- a/packages/community/src/content/docs/guides/quick-start/umd.mdx
+++ b/packages/community/src/content/docs/guides/quick-start/umd.mdx
@@ -182,6 +182,7 @@ Univer can also be imported through UMD. It should be noted that Univer's plugin
       <script src="https://unpkg.com/@univerjs/core/lib/umd/index.js"></script>
       <script src="https://unpkg.com/@univerjs/design/lib/umd/index.js"></script>
       <script src="https://unpkg.com/@univerjs/engine-render/lib/umd/index.js"></script>
+      <script src="https://unpkg.com/@univerjs/engine-numfmt/lib/umd/index.js"></script>
       <script src="https://unpkg.com/@univerjs/engine-formula/lib/umd/index.js"></script>
       <script src="https://unpkg.com/@univerjs/ui/lib/umd/index.js"></script>
       <script src="https://unpkg.com/@univerjs/docs/lib/umd/index.js"></script>
@@ -211,6 +212,7 @@ Univer can also be imported through UMD. It should be noted that Univer's plugin
       <script src="https://unpkg.com/@univerjs/core/lib/umd/index.js"></script>
       <script src="https://unpkg.com/@univerjs/design/lib/umd/index.js"></script>
       <script src="https://unpkg.com/@univerjs/engine-render/lib/umd/index.js"></script>
+      <script src="https://unpkg.com/@univerjs/engine-numfmt/lib/umd/index.js"></script>
       <script src="https://unpkg.com/@univerjs/engine-formula/lib/umd/index.js"></script>
       <script src="https://unpkg.com/@univerjs/ui/lib/umd/index.js"></script>
       <script src="https://unpkg.com/@univerjs/docs/lib/umd/index.js"></script>
