--- a/packages/community/src/content/docs/guides/configuration/cell-data.mdx
+++ b/packages/community/src/content/docs/guides/configuration/cell-data.mdx
@@ -10,20 +10,26 @@ This document is only applicable to 📊 Univer Sheet.
 
 ## Cell Position
 
-The cell data in Univer Sheet is stored in the [cellData](/api/core/interfaces/IWorksheetData.html#cellData) field of [IWorksheetData](/api/core/interfaces/IWorksheetData.html), cellData is a two-dimensional Map structure, each key value marks the position of the cell, and the value is an [ICellData](/api/core/interfaces/ICellData.html) object, which contains all the cell information such as cell value, style, type, etc.
+The cell data in Univer Sheet is stored in the [cellData](/api/core/interfaces/IWorksheetData.html#cellData) field of [IWorksheetData](/api/core/interfaces/IWorksheetData.html), cellData is a two-dimensional Map structure, with the first and second indexes representing the row number and column number respectively, and each cell is an [ICellData](/api/core/interfaces/ICellData.html) object, which contains all the cell information such as cell value, style, type, etc.
 
-Just like this.
+The structure of cellData is as follows
 
 ```typescript
 // IWorksheetData
 {   
   cellData: {
+    // first row
     0: {
+      // first column
       0: { v: 'A1' },
+      // second column
       1: { v: 'B1' },
     },
+    // second row
     1: {
+      // first column
       0: { v: 'A2' },
+      // second column
       1: { v: 'B2' },
     },
   }
@@ -37,7 +43,7 @@ The complete cell information is as follows.
 | Property | Description |
 | --- | --- |
 | v | Cell original value |
-| s | Cell style object or style id |
+| s | Cell style id or style object |
 | t | Cell type |
 | p | Rich text, also a 📝 Univer Doc |
 | f | Formula |
@@ -48,7 +54,7 @@ Check out the type information of each field of [ICellData](/api/core/interfaces
 
 ### Cell Original Value
 
-`cellData.v` stores the original value of the cell, which can be a string or a number.
+`cellData.v` stores the original value of the cell, which can be a string or a number. For cells with formulas, `v` stores the calculation result of the formula.
 
 Here we show two different cell values.
 
@@ -66,9 +72,45 @@ Here we show two different cell values.
 
 ### Cell Style
 
-`cellData.s` stores the style of the cell. If the type is an object, it represents a complete cell style object [IStyleData](/api/core/interfaces/IStyleData.html).
+`cellData.s` stores the style id or style object of the cell.
 
-The complete style field is as follows.
+If `s` is a string, it represents a style id. Univer Sheet supports reference optimization for styles. The repeated style objects are stored in the [styles](/api/core/interfaces/IWorkbookData.html#styles) field of IWorkbookData, which is a Map structure, each key is the style id, and the value is the style object.
+
+```typescript
+// IWorkbookData
+{
+  styles: {
+    'random_style_id_1': {
+      fs: 12,
+      bg: {
+        rgb: '#ff0000'
+      }
+    }
+  }
+}
+```
+
+Then store the id in the cell style to achieve the purpose of style reuse.
+
+```typescript
+// IWorksheetData
+{
+  cellData: {
+    0: {
+      0: { 
+        v: 'A1', 
+        s: 'random_style_id_1'
+      },
+      1: { 
+        v: 'B1', 
+        s: 'random_style_id_1'
+      },
+    },
+  }
+}
+```
+
+If `s` is an object, it represents a complete cell style object [IStyleData](/api/core/interfaces/IStyleData.html).
 
 The complete style field is as follows.
 
@@ -343,45 +385,9 @@ You can check out the type information of each field of [IStyleData](/api/core/i
 } 
 ```
 
-Cell style may also be a string, representing the style id. Univer Sheet supports reference optimization for styles. The repeated style objects are stored in the [styles](/api/core/interfaces/IWorkbookData.html#styles) field of [IWorkbookData](/api/core/interfaces/IWorkbookData.html), which is a Map structure, each key is the style id, and the value is the style object.
-
-```typescript
-// IWorkbookData
-{
-  styles: {
-    'random_style_id_1': {
-      fs: 12,
-      bg: {
-        rgb: '#ff0000'
-      }
-    }
-  }
-}
-```
-
-Then store the id in the cell style to achieve the purpose of style reuse.
-
-```typescript
-// IWorksheetData
-{
-  cellData: {
-    0: {
-      0: { 
-        v: 'A1', 
-        s: 'random_style_id_1'
-      },
-      1: { 
-        v: 'B1', 
-        s: 'random_style_id_1'
-      },
-    },
-  }
-}
-```
-
 ### Cell Type
 
-`cellData.t` is an enum number, represents the type of the cell. `1` means string, `2` means number, `3` means boolean, `4` means force text.
+`cellData.t` is an enumeration [CellValueType](/api/core/enums/CellValueType.html), represents the type of the cell. `1` means string, `2` means number, `3` means boolean, `4` means force text. Univer will automatically recognize it if it is not set.
 
 If the cell is a boolean type, the value of `cellData.v` is stored as `0` or `1`, `0` means false, `1` means true.
 
