--- a/packages/pro/src/content/docs/enterprises/community-edition.mdx
+++ b/packages/pro/src/content/docs/enterprises/community-edition.mdx
@@ -49,7 +49,7 @@ We provide excellent technical metrics to allow you and your team to work in a h
     4. Start the frontend demo.
 
     ```bash
-    docker run --net=unvier-prod --rm --name univer-collaboration-lite \
+    docker run --net=univer-prod --rm --name univer-collaboration-lite \
       -p 3010:3010 univer-acr-registry.cn-shenzhen.cr.aliyuncs.com/release/univer-collaboration-lite:latest
     ```
   </TabItem>
