--- a/packages/pro/src/content/docs/zh-cn/enterprises/community-edition.mdx
+++ b/packages/pro/src/content/docs/zh-cn/enterprises/community-edition.mdx
@@ -49,7 +49,7 @@ import { TabItem, Tabs } from "@astrojs/starlight/components";
     4. 启动前端服务。
 
     ```bash
-    docker run --net=unvier-prod --rm --name univer-collaboration-lite \
+    docker run --net=univer-prod --rm --name univer-collaboration-lite \
       -p 3010:3010 univer-acr-registry.cn-shenzhen.cr.aliyuncs.com/release/univer-collaboration-lite:latest
     ```
   </TabItem>
