--- a/packages/community/src/content/docs/zh-cn/guides/facade/general.mdx
+++ b/packages/community/src/content/docs/zh-cn/guides/facade/general.mdx
@@ -10,12 +10,10 @@ sidebar:
 
 ### 命令
 
-Univer 中大多数的操作都会注册到命令系统，并通过命令系统来触发。
-
-这种统一的操作方式使得 Univer 可以很容易的实现撤销、重做、协同等功能。
+Univer 中大多数的操作都会注册到命令系统，并通过命令系统来触发。这种统一的操作方式使得 Univer 可以很容易的实现撤销、重做、协同等功能。
 
 :::tip
-命令可以简单理解为 Univer 中独特的 “事件” ，如需了解更多设计细节请阅读 [Univer 命令系统](/zh-cn/guides/concepts-and-architecture/architecture/#命令系统) 。
+如需了解更多设计细节请阅读 [Univer 命令系统](/zh-cn/guides/concepts-and-architecture/architecture/#命令系统) 。
 :::
 
 ## 命令系统
