--- a/packages/community/src/content/docs/zh-cn/guides/concepts-and-architecture/rendering.mdx
+++ b/packages/community/src/content/docs/zh-cn/guides/concepts-and-architecture/rendering.mdx
@@ -9,6 +9,7 @@ import rendererBaseObject from '@/assets/img/renderer-base-object.png';
 import rendererTextureCache from '@/assets/img/renderer-texture-cache.png';
 import rendererComponent from '@/assets/img/renderer-component.png';
 import rendererScene from '@/assets/img/renderer-scene.png';
+import renderUnitImage from '@/assets/img/render-unit.png';
 import { Image } from 'astro:assets';
 
 Univer 的渲染引擎参考了 KonvaJs / FabricJs 以及 BabylonJs，基于 Canvas2D 实现。
@@ -190,3 +191,9 @@ export class Rect<T extends IRectProps = IRectProps> extends Shape<T> {
 Component 支持用 canvas 作为缓存，进行贴图缓存绘制。目前在滚动 sheet 的时候，渲染引擎只会绘制增量部分的视图，极大提升了性能。
 
 <Image alt='rendererTextureCache' src={rendererTextureCache}/>
+
+## Render Unit
+
+<Image alt="render unit architecture" src={renderUnitImage} />
+
+为了支持注销和创建不同的 unit，以及在未来支持多个 unit 同时渲染，Univer 提出了 `RenderUnit` 的概念，一个 unit 对应一个 `RenderUnit`。`RenderUnit` 内部会持有一个 `Injector`，用户注册的 render controller 会被 Univer 在这个 `Injector` 当中实例化。Render controller 负责一个 unit 对于某个功能的渲染逻辑，它需要继承 `IRenderController` 接口。
