feat: add pro docs

--- a/src/pages/guides/sheet/customization/command.zh-CN.mdx
+++ b/src/pages/guides/sheet/customization/command.zh-CN.mdx
@@ -51,7 +51,7 @@ export class YourController extends Disposable {
 }
 ```
 
-之后就可以通过 `ICommandService` 来执行命令了。实践中常用的方式是通过 UI 触发，请参考[拓展 UI](/zh-cn/guides/extend/ui)。
+之后就可以通过 `ICommandService` 来执行命令了。实践中常用的方式是通过 UI 触发。
 
 ### Undo / Redo
 
