--- a/src/pages/pro/guides/sheet/deployment/docker.zh-CN.mdx
+++ b/src/pages/pro/guides/sheet/deployment/docker.zh-CN.mdx
@@ -80,4 +80,4 @@ Univer 服务默认端口如下：
 # 替换为 S3_ENDPOINT_PUBLIC=http://192.168.50.172:19000
 ```
 
-若仍然不能解决您的问题，请[联系社区](/zh-cn/guides/introduction#下一步)获取帮助。
+若仍然不能解决您的问题，请[联系社区](/guides/introduction#下一步)获取帮助。
