--- a/src/pages/pro/guides/sheet/deployment/kubernetes.zh-CN.mdx
+++ b/src/pages/pro/guides/sheet/deployment/kubernetes.zh-CN.mdx
@@ -71,5 +71,5 @@ Univer Pro 在 Kubernetes 上的默认服务和端口如下： */}
 服务未启动: 检查 Kubernetes 的 Pod 是否正常运行，查看日志以确定问题所在。
 
 
-若仍然不能解决您的问题， [联系社区](/zh-cn/guides/introduction#下一步) 获取帮助。
+若仍然不能解决您的问题， [联系社区](/guides/introduction#下一步) 获取帮助。
 
