--- a/src/pages/guides/sheet/customization/command.en-US.mdx
+++ b/src/pages/guides/sheet/customization/command.en-US.mdx
@@ -50,7 +50,7 @@ export class YourController extends Disposable {
 }
 ```
 
-After declaring the required attributes, the command can be executed using the `ICommandService`. In real-world scenarios, it's common to trigger commands via the user interface (UI). For more information, please refer to the ["Extend UI"](./ui.md) guide.
+After declaring the required attributes, the command can be executed using the `ICommandService`. In real-world scenarios, it's common to trigger commands via the user interface (UI).
 
 ### Undo / Redo
 
